Avignon: adjust font scaling

--- a/samcarter/Avignon/Avignon.tex
+++ b/samcarter/Avignon/Avignon.tex
@@ -3,7 +3,7 @@
 
 \usepackage{tikzlings}
 \usepackage{fontspec}
-\setmonofont{Arial Unicode MS}
+\setmonofont{Arial Unicode MS}[Scale=0.9]
 
 \setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{background canvas}{\includegraphics[width=\paperwidth]{Pont_d`Avignon}}
