mirage: warmer background colour

--- a/carlatex/Mirage.tex
+++ b/carlatex/Mirage.tex
@@ -4,7 +4,7 @@
 \usetikzlibrary{decorations.markings}
 
 \setbeamertemplate{navigation symbols}{}
-\setbeamertemplate{background canvas}{\includegraphics[width=\paperwidth]{desert-9019840_1280}}
+\setbeamertemplate{background canvas}{\includegraphics[width=\paperwidth]{desert-9019840_1280_warmer}}
 \graphicspath{{include/}}
 
 % Copied from samcarter's "lion" in Extravaganza 2024
