mirage: slowing down the animation

--- a/carlatex/Mirage.tex
+++ b/carlatex/Mirage.tex
@@ -15,7 +15,7 @@
 
 \newcounter{mystep}
 \newcommand{\setstep}{%
-\ifnum \intmodnn{\thepage}{8} = 1
+\ifnum \intmodnn{\thepage}{24} = 1
   \setcounter{mystep}{0}
 \fi%
 \stepcounter{mystep}%
@@ -35,25 +35,25 @@
   \setstep
   \begin{tikzpicture}[remember picture, overlay,
 	    decoration={
-      markings,  
-      mark=at position \thepage/500 
+      markings,
+      mark=at position \thepage/500
 			with {
 		% Copied from samcarter's "lion" in Extravaganza 2024
 				\node[rotate=-9*sin(\thepage*7), anchor=south, scale=4]
-					{\includegraphics[page=\themystep,height=1cm]{suricato}};
+					{\includegraphics[page=\themystep,height=1cm]{suricato_repeat}};
 				}
 			}
 		]
 
-	  \path[postaction=decorate] 
+	  \path[postaction=decorate]
 		                  (3,-4)  to[bend right] (4, -3.5)   to[bend left] (5,-4)    to[bend left] (6, -3.5)
 			 to[bend right] (7,-4)  to[bend right] (8, -3.5)   to[bend left] (9,-4)    to[bend left] (10, -3.5)
 			 to[bend right] (11,-4) to[bend right] (12, -3.5)  to[bend left] (13,-4) ;
-														 
+
     % credit for background image
     \node[white,text width=.7\paperwidth,font=\tiny,align=center] at ([yshift=0.35cm]current page.south)
       {Image source: \url{https://pixabay.com/de/photos/wüste-sand-düne-sonnenuntergang-9019840/}};
-    
+
   \end{tikzpicture}
   \pause[500]
 \end{frame}%
