--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -86,98 +86,109 @@
 \end{minipage}
 \vspace{0.15cm}\mbox
 
-\illustration[Mariachi Marmots]{\textwidth,page=14}{../carla/mariachi/mariachi}
+% TODO
+\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
 \begin{monthCalendar}{2025}{01}
-\event{2025-01-10}{}{Birthday Donald Knuth}
-\event{2025-01-13}{}{National Rubber Duck Day}
+\event{2026-01-08}{}{GUTenberg: Logiciel de gravure musicale Lilypond}
+\event{2026-01-10}{}{Birthday Donald Knuth}
+\event{2026-01-13}{}{National Rubber Duck Day}
 \end{monthCalendar}
 \timestamp{t=1m23s}
 
-\illustration[Abbey Road 2.0]{\textwidth,page=300}{../samcarter/abbeyroad/abbeyroad}
+\illustration[Cheese]{\textwidth,page=14}{../samcarter/cheese/cheese}
 \begin{monthCalendar}{\nextyear}{02}
-%\event{2025-02-01}{}{TeXLive'25 test build start}
-\event{2025-02-02}{}{Groundhog Day}
-\event{2025-02-06}{}{GUTenberg: Exposé sur le thème beamer Gotham}
-\event{2025-02-08}{}{TeXLive'25 pretest start}
-\event{2025-02-16}{}{Birthday Island of \TeX}
-\event{2025-02-22}{}{TeXLive'25 code freeze}
+\event{2026-02-02}{}{Groundhog Day}
+\event{2026-02-07}{2026-02-10}{CODEX X (Oakland, California, USA)}
+\event{2026-02-07}{}{TeXLive'26 pretest start}
+\event{2026-02-16}{}{Birthday Island of \TeX}
+\event{2026-02-21}{}{TeXLive'26 code freeze}
+\event{2026-02-28}{}{TeXLive'26 final updates from CTAN}
 \end{monthCalendar}
 \timestamp{t=3m52s}
 
-\illustration[White Water Fun]{\textwidth,page=136}{../samcarter/whitewaterride/whitewaterride}
+% TODO
+\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
 \begin{monthCalendar}{\nextyear}{03}
-\event{2025-03-01}{}{TUG election, nominations due}
-\event{2025-03-01}{}{TeXLive'25 final updates from CTAN}
-\event{2025-03-01}{}{Saint David‘s Day}
-\event{2025-03-08}{}{TeXLive'25 release}
-\event{2025-03-21}{}{TUGboat 46:1 submission deadline}
+\event{2026-03-01}{}{Saint David‘s Day}
+\event{2026-03-11}{2026-03-14}{Dante'26 (Lahnau, Germany)}
+\event{2026-03-07}{}{TeXLive'26 release}
+\event{2026-03-20}{}{TUGboat 47:1 submission deadline}
 \end{monthCalendar}
 \timestamp{t=4m22s}
 
-\illustration[BatBär]{\textwidth,page=500}{../samcarter/batbear/batbear}
+% TODO
+\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
 \begin{monthCalendar}{\nextyear}{04}
-\event{2025-04-03}{2025-04-05}{Dante'25 (Darmstadt, Germany)}
-\event{2025-04-29}{2025-05-04}{BachoTEX'25 (Bachotek, Poland)}
+\event{2026-04-29}{2026-05-03}{BachoTEX'26 (Bachotek, Poland)}
 \end{monthCalendar}
 \timestamp{t=3m25s}
 
-\illustration[Meanwhile in Africa...]{\textwidth,page=310}{../samcarter/lion/lion}
+% TODO
+\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
 \begin{monthCalendar}{\nextyear}{05}
-\event{2025-04-29}{2025-05-04}{BachoTEX'25 (Bachotek, Poland)}
-\event{2025-05-25}{}{Towel Day}
+\event{2026-04-29}{2026-05-03}{BachoTEX'26 (Bachotek, Poland)}
+\event{2026-05-25}{}{Towel Day}
+\event{2026-05-27}{2026-05-30}{ATypI 2026 Stanford (Palo Alto, California, USA)}
+\event{2026-05-30}{}{Now26 (Paris, France)}
 \end{monthCalendar}
 \timestamp{t=4m42s}
 
-\illustration[Flower Power]{\textwidth,page=1}{../samcarter/flowerpower/flowerpower}
+\illustration[Flower Power]{\textwidth,page=46}{../paulo/flower-field/flower-field}
 \begin{monthCalendar}{\nextyear}{06}
-\event{2025-06-01}{}{\LaTeX\ release}
-\event{2025-06-02}{}{Festa della Repubblica (Italy)}
-\event{2025-06-09}{}{Birthday Donald Duck}
-\event{2025-06-23}{}{National Typewriter Day}
+\event{2026-06-01}{}{\LaTeX\ release}
+\event{2026-06-02}{}{Festa della Repubblica (Italy)}
+\event{2026-06-06}{2026-06-08}{XML Prague 2026 (Prague, Czech Republic)}
+\event{2026-06-09}{}{Birthday Donald Duck}
+\event{2026-06-23}{}{National Typewriter Day}
 \end{monthCalendar}
 \timestamp{t=0m55s}
 
-\illustration[TUG'25]{\textwidth,page=400}{../ulrike/india/india}
+% TODO
+\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
 \begin{monthCalendar}{\nextyear}{07}
-\event{2025-07-18}{}{Dies ater}
-\event{2025-07-18}{2025-07-20}{TUG'25 (Trivandrum, India)}
-\event{2025-07-27}{}{TUGboat 46:2 submission deadline}
+\event{2026-07-01}{2026-07-03}{OSSConf 2026 (Žilina, Slovakia)}
+\event{2026-07-18}{}{Dies ater}
+%\event{2026-07-??}{2026-07-??}{TUG'26 (Alberta, Canada)}
 \end{monthCalendar}
 \timestamp{t=2m53s}
 
-\illustration[Tagging the World]{\textwidth,page=25}{../ulrike/tagging-factory/tagging-factory}
+\illustration[Mirage]{\textwidth,page=347}{../carlatex/mirage/Mirage}
 \begin{monthCalendar}{\nextyear}{08}
-\event{2025-08-15}{}{Ferragosto}
-\event{2025-08-20}{}{International Hawaiian Pizza Day}
-\event{2025-08-22}{2025-08-29}{ConTEXt Meeting (Chmielno, Poland)}
+\event{2026-08-06}{2026-08-08}{TypeCon 2026 (Portland, Oregon)}
+\event{2026-08-15}{}{Ferragosto}
+\event{2026-08-20}{}{International Hawaiian Pizza Day}
+\event{2026-08-24}{2026-08-29}{ConTEXt Meeting (Maibach, Germany)}
 \end{monthCalendar}
 \timestamp{t=2m29s}
 
-\illustration[Unstoppable]{\textwidth,page=1}{../samcarter/unstoppable/unstoppable}
+\illustration[Avignon]{\textwidth,page=14}{../samcarter/Avignon/Avignon}
 \begin{monthCalendar}{\nextyear}{09}
-\event{2025-09-03}{2025-09-05}{DocEng (Nottingham, UK)}
-\event{2025-09-19}{}{Talk Like a Pirate Day}
+\event{2026-09-19}{}{Talk Like a Pirate Day}
 \end{monthCalendar}
 \timestamp{t=0m26s}
 
-\illustration[Exciting Times]{\textwidth,page=1}{../carla/halloween/ExcitingTimesHalloween.pdf}
+% TODO
+\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
 \begin{monthCalendar}{\nextyear}{10}
-\event{2025-10-16}{}{Global Cat Day}
-\event{2025-10-25}{}{Saint Crispin's Day}
+\event{2026-10-16}{}{Global Cat Day}
+\event{2026-10-25}{}{Saint Crispin's Day}
+\event{2026-10-28}{2026-10-31}{ATypI 2026 Sharjah (United Arab Emirates)}
 \end{monthCalendar}
 \timestamp{t=0m10s}
 
-\illustration[Paddington]{\textwidth,page=1}{../samcarter/paddington/paddington}
+% TODO
+\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
 \begin{monthCalendar}{\nextyear}{11}
-\event{2025-11-01}{}{\LaTeX\ release}
-\event{2025-11-07}{}{Hug a Bear Day}
+\event{2026-11-01}{}{\LaTeX\ release}
+\event{2026-11-07}{}{Hug a Bear Day}
 \end{monthCalendar}
 \timestamp{t=1m48s}
 
-\illustration[Grand Finale]{\textwidth,page=555}{../ulrike/finale/finale}
+% TODO
+\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
 \begin{monthCalendar}{\nextyear}{12}
-\event{2025-12-08}{}{Pretend To Be A Time Traveler Day}
-\event{2025-12-20}{}{TikZlings Extravaganza 2025 release}
+\event{2026-12-08}{}{Pretend To Be A Time Traveler Day}
+%\event{2026-12-??}{}{TikZlings Extravaganza 2026 release}
 \end{monthCalendar}
 \timestamp{t=5m47s}
 
