--- a/samcarter/Avignon/Avignon.tex
+++ b/samcarter/Avignon/Avignon.tex
@@ -16,25 +16,25 @@
 
     \node[rotate=-2.5] at ([yshift=-1.75cm]current page.center) {\includegraphics[width=1.1\paperwidth]{Pont_d`Avignon}};
 
-    \begin{scope}[xshift=sin(\thepage*2)*0.4cm]
-      \pig[scale=0.35,yshift=-5.3cm,xshift=5cm]
-      \bee[scale=0.36,yshift=-5.1cm,xshift=7.5cm]
-      \hippo[scale=0.37,yshift=-4.9cm,xshift=10cm]
-      \meerkat[scale=0.38,yshift=-4.7cm,xshift=12.5cm]
-      \owl[scale=0.39,yshift=-4.6cm,xshift=15cm]
-      \elephant[scale=0.4,yshift=-4.4cm,xshift=17.5cm]
-      \chicken[scale=0.41,yshift=-4.3cm,xshift=20cm]
-      \ape[scale=0.42,yshift=-4.2cm,xshift=22.5cm,handposition=clap]
-      \dog[scale=0.43,yshift=-4.1cm,xshift=25cm]
-      \marmot[scale=0.44,yshift=-4.1cm,xshift=27.5cm]
-      \bat[scale=0.45,yshift=-3.9cm,xshift=30cm,wings=0.5]
+    \begin{scope}[xshift=sin(\thepage*2)*0.2cm]
+      \pig[scale=0.35,yshift=-5.3cm,xshift=5cm,rotate=-7.34*sin(\thepage*7)]
+      \bee[scale=0.36,yshift=-5.1cm,xshift=7.5cm,rotate=-7.34*sin(\thepage*7)]
+      \hippo[scale=0.37,yshift=-4.9cm,xshift=10cm,rotate=-7.34*sin(\thepage*7)]
+      \meerkat[scale=0.38,yshift=-4.7cm,xshift=12.5cm,rotate=-7.34*sin(\thepage*7)]
+      \owl[scale=0.39,yshift=-4.6cm,xshift=15cm,rotate=-7.34*sin(\thepage*7)]
+      \elephant[scale=0.4,yshift=-4.4cm,xshift=17.5cm,rotate=-7.34*sin(\thepage*7)]
+      \chicken[scale=0.41,yshift=-4.3cm,xshift=20cm,rotate=-7.34*sin(\thepage*7)]
+      \ape[scale=0.42,yshift=-4.2cm,xshift=22.5cm,handposition=clap,rotate=-7.34*sin(\thepage*7)]
+      \dog[scale=0.43,yshift=-4.1cm,xshift=25cm,rotate=-7.34*sin(\thepage*7)]
+      \marmot[scale=0.44,yshift=-4.1cm,xshift=27.5cm,rotate=-7.34*sin(\thepage*7)]
+      \bat[scale=0.45,yshift=-3.9cm,xshift=30cm,wings=0.5,rotate=-7.34*sin(\thepage*7)]
     \end{scope}
 
     % credit for background image
     \node[white,text width=\paperwidth,font=\tiny,align=center] at ([yshift=0.35cm]current page.south) {Image modified from: \url{https://upload.wikimedia.org/wikipedia/commons/6/61/Pont_d`Avignon_阿微儂橋_-_panoramio.jpg} (by lienyuan lee, CC BY 3.0)};
 
   \end{tikzpicture}
-  \pause[450]
+  \pause[400]
 \end{frame}
 
 \end{document}
