Stormy Weather: convert to video

--- a/carlatex/StormyWeather/include/bat.tex
+++ b/carlatex/StormyWeather/include/bat.tex
@@ -27,7 +27,7 @@
 
 \begin{document}
 \begin{tikzpicture}
-    \bat
+    \bat[body=black!85!white]
     \pic at (.4,1.9) {helmet};
 \end{tikzpicture}
 \end{document}
