--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -116,15 +116,13 @@
 \end{monthCalendar}
 \timestamp{t=4m22s}
 
-% TODO
-\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
+\illustration[Stormy Weather]{\textwidth,page=14}{../carlatex/StormyWeather/StormyWeather}
 \begin{monthCalendar}{\nextyear}{04}
 \event{2026-04-29}{2026-05-03}{BachoTEX'26 (Bachotek, Poland)}
 \end{monthCalendar}
 \timestamp{t=3m25s}
 
-% TODO
-\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
+\illustration[Dinner]{\textwidth,page=14}{../samcarter/dinner/dinner}
 \begin{monthCalendar}{\nextyear}{05}
 \event{2026-04-29}{2026-05-03}{BachoTEX'26 (Bachotek, Poland)}
 \event{2026-05-25}{}{Towel Day}
