--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -165,8 +165,7 @@
 \end{monthCalendar}
 \timestamp{t=0m26s}
 
-% TODO
-\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
+\illustration[TikZlings Abbey]{\textwidth,page=250}{../samcarter/TikZlingsAbbey/TikZlingsAbbey}
 \begin{monthCalendar}{\nextyear}{10}
 \event{2026-10-16}{}{Global Cat Day}
 \event{2026-10-25}{}{Saint Crispin's Day}
