Lumberjack: renamed folder

--- a/carlatex/Lumberjack/Lumberjack.tex
+++ b/carlatex/Lumberjack/Lumberjack.tex
@@ -1,3 +1,5 @@
+% !TeX document-id = {4d460a17-bbc2-464c-bfb8-e082d5147b29}
+% !TeX TS-program = latexmk -pdflua % | txs:///view-pdf | txs:///view-log
 \documentclass[aspectratio=169]{beamer}
 
 \usepackage{tikzlings}
@@ -22,7 +24,7 @@
 	  % Copied from samcarter's "lion" in Extravaganza 2024
 		\node[rotate=-9*sin(\thepage*7), anchor=south] at (9.7,-4.5)
 			{\includegraphics[height=3.5cm]{marmot}};
-			                           		
+
     % credit for background image
     \node[white,text width=.7\paperwidth,font=\tiny,align=center] at ([yshift=0.35cm]current page.south)
       {Image source: \url{https://pixabay.com/de/photos/mammutbaum-bäume-stämme-baumstämme-5978487/}};
