mirage: switched to lualatex

--- a/carlatex/mirage/Mirage.tex
+++ b/carlatex/mirage/Mirage.tex
@@ -1,3 +1,5 @@
+% !TeX document-id = {4d460a17-bbc2-464c-bfb8-e082d5147b29}
+% !TeX TS-program = latexmk -pdflua % | txs:///view-pdf | txs:///view-log
 \documentclass[aspectratio=169]{beamer}
 
 \usepackage{tikzlings}
