update readme + calendar

--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -106,8 +106,7 @@
 \end{monthCalendar}
 \timestamp{t=3m52s}
 
-% TODO
-\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
+\illustration[Lumberjack]{\textwidth,page=14}{../carlatex/Lumberjack/Lumberjack}
 \begin{monthCalendar}{\nextyear}{03}
 \event{2026-03-01}{}{Saint David‘s Day}
 \event{2026-03-11}{2026-03-14}{Dante'26 (Lahnau, Germany)}
