update readme + calendar

--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -95,7 +95,7 @@
 \end{monthCalendar}
 \timestamp{t=1m23s}
 
-\illustration[Cheese]{\textwidth,page=14}{../samcarter/cheese/cheese}
+\illustration[Sweet dreams are made of cheese]{\textwidth,page=14}{../samcarter/cheese/cheese}
 \begin{monthCalendar}{\nextyear}{02}
 \event{2026-02-02}{}{Groundhog Day}
 \event{2026-02-07}{2026-02-10}{CODEX X (Oakland, California, USA)}
@@ -130,7 +130,7 @@
 \end{monthCalendar}
 \timestamp{t=4m42s}
 
-\illustration[Flower Power]{\textwidth,page=46}{../paulo/flower-field/flower-field}
+\illustration[Where have all the flowers gone?]{\textwidth,page=46}{../paulo/flower-field/flower-field}
 \begin{monthCalendar}{\nextyear}{06}
 \event{2026-06-01}{}{\LaTeX\ release}
 \event{2026-06-02}{}{Festa della Repubblica (Italy)}
@@ -158,7 +158,7 @@
 \end{monthCalendar}
 \timestamp{t=2m29s}
 
-\illustration[Avignon]{\textwidth,page=14}{../samcarter/Avignon/Avignon}
+\illustration[En vacançes]{\textwidth,page=14}{../samcarter/Avignon/Avignon}
 \begin{monthCalendar}{\nextyear}{09}
 \event{2026-09-19}{}{Talk Like a Pirate Day}
 \end{monthCalendar}
