cheese: using shorter file names

--- a/samcarter/cheese/cheese.tex
+++ b/samcarter/cheese/cheese.tex
@@ -14,7 +14,7 @@
 \begin{frame}
   \begin{tikzpicture}[remember picture, overlay]
 
-    \node at ([yshift=0.8cm]current page.center) {\includegraphics[width=\paperwidth]{wheel-fruit-round-pile-pattern-shop-food-produce-pumpkin-market-stack-yellow-baking-eat-bakery-circle-cheese-holland-netherlands-circular-dutch-layers-dairy-oval-cheesy-1257616_bg}};
+    \node at ([yshift=0.8cm]current page.center) {\includegraphics[width=\paperwidth]{wheel-fruit_bg}};
 
     \begin{scope}[xshift=9.5cm,yshift=-6.75cm]
       \ifnum\thepage>400
@@ -24,7 +24,7 @@
       \fi
     \end{scope}
 
-    \node at ([yshift=0.8cm]current page.center) {\includegraphics[width=\paperwidth]{wheel-fruit-round-pile-pattern-shop-food-produce-pumpkin-market-stack-yellow-baking-eat-bakery-circle-cheese-holland-netherlands-circular-dutch-layers-dairy-oval-cheesy-1257616_fg}};
+    \node at ([yshift=0.8cm]current page.center) {\includegraphics[width=\paperwidth]{wheel-fruit_fg}};
 
     \node[rotate=-5*sin(5*\thepage),anchor=south] at (3,-3) {
       \ifnum\thepage>400
