update readme + calendar

--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -180,8 +180,7 @@
 \end{monthCalendar}
 \timestamp{t=1m48s}
 
-% TODO
-\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
+\illustration[Finale]{\textwidth,page=67}{../ulrike/finale/finale}
 \begin{monthCalendar}{\nextyear}{12}
 \event{2026-12-08}{}{Pretend To Be A Time Traveler Day}
 %\event{2026-12-??}{}{TikZlings Extravaganza 2026 release}
