calendar: short titles

--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -95,7 +95,7 @@
 \end{monthCalendar}
 \timestamp{t=1m23s}
 
-\illustration[Sweet dreams are made of cheese]{\textwidth,page=14}{../samcarter/cheese/cheese}
+\illustration[Cheese Dreams]{\textwidth,page=14}{../samcarter/cheese/cheese}
 \begin{monthCalendar}{\nextyear}{02}
 \event{2026-02-02}{}{Groundhog Day}
 \event{2026-02-07}{2026-02-10}{CODEX X (Oakland, California, USA)}
@@ -130,7 +130,7 @@
 \end{monthCalendar}
 \timestamp{t=4m42s}
 
-\illustration[Where have all the flowers gone?]{\textwidth,page=46}{../paulo/flower-field/flower-field}
+\illustration[Flower Power]{\textwidth,page=46}{../paulo/flower-field/flower-field}
 \begin{monthCalendar}{\nextyear}{06}
 \event{2026-06-01}{}{\LaTeX\ release}
 \event{2026-06-02}{}{Festa della Repubblica (Italy)}
