All the world's a stage

--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -86,8 +86,7 @@
 \end{minipage}
 \vspace{0.15cm}\mbox
 
-% TODO
-\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
+\illustration[Happy New Year]{\textwidth,page=67}{../ulrike/finale/finale}
 \begin{monthCalendar}{2025}{01}
 \event{2026-01-08}{}{GUTenberg: Logiciel de gravure musicale Lilypond}
 \event{2026-01-10}{}{Birthday Donald Knuth}
@@ -172,8 +171,7 @@
 \end{monthCalendar}
 \timestamp{t=0m10s}
 
-% TODO
-\illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
+\illustration[All the world's a stage]{\textwidth,page=14}{../samcarter/globe/globe}
 \begin{monthCalendar}{\nextyear}{11}
 \event{2026-11-01}{}{\LaTeX\ release}
 \event{2026-11-07}{}{Hug a Bear Day}
