globe: fixed bounding box size

--- a/samcarter/globe/include/Shakespeare_closed.tex
+++ b/samcarter/globe/include/Shakespeare_closed.tex
@@ -12,6 +12,7 @@
 \begin{document}
 
 \begin{tikzpicture}[scale=5]
+  \path (-0,-0) rectangle (2.2,2.2);
   \duck[tshirt=red!40!black]
 
   \begin{pgfinterruptboundingbox}
