--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -105,7 +105,7 @@
 \end{monthCalendar}
 \timestamp{t=3m52s}
 
-\illustration[Lumberjack]{\textwidth,page=14}{../carlatex/Lumberjack/Lumberjack}
+\illustration[The Divine Comedy]{\textwidth,page=14}{../samcarter/dante/dante}
 \begin{monthCalendar}{\nextyear}{03}
 \event{2026-03-01}{}{Saint David‘s Day}
 \event{2026-03-11}{2026-03-14}{Dante'26 (Lahnau, Germany)}
@@ -157,7 +157,8 @@
 \end{monthCalendar}
 \timestamp{t=2m29s}
 
-\illustration[En vacançes]{\textwidth,page=14}{../samcarter/Avignon/Avignon}
+\illustration[Lumberjack]{\textwidth,page=14}{../carlatex/Lumberjack/Lumberjack}
+%\illustration[En vacançes]{\textwidth,page=14}{../samcarter/Avignon/Avignon}
 \begin{monthCalendar}{\nextyear}{09}
 \event{2026-09-19}{}{Talk Like a Pirate Day}
 \end{monthCalendar}
@@ -178,7 +179,7 @@
 \end{monthCalendar}
 \timestamp{t=1m48s}
 
-\illustration[Finale]{\textwidth,page=67}{../ulrike/finale/finale}
+\illustration[Happy Christmas]{\textwidth,page=14}{../carlatex/HappyChristmas/HappyChristmas}
 \begin{monthCalendar}{\nextyear}{12}
 \event{2026-12-08}{}{Pretend To Be A Time Traveler Day}
 %\event{2026-12-??}{}{TikZlings Extravaganza 2026 release}
