--- a/samcarter/TikZlingsAbbey/TikZlingsAbbey.tex
+++ b/samcarter/TikZlingsAbbey/TikZlingsAbbey.tex
@@ -33,7 +33,7 @@
     \end{scope}
 
     % credit for background image
-    \node[white,text width=\paperwidth,font=\tiny,align=center] at ([yshift=0.35cm]current page.south) {Image source: \url{https://commons.wikimedia.org/wiki/File:Highclere_Castle_-_Through_the_Trees_-_panoramio.jpg}};
+    \node[white,text width=\paperwidth,font=\tiny,align=center] at ([yshift=0.35cm]current page.south) {Image source: \url{https://commons.wikimedia.org/wiki/File:Highclere_Castle_-_Through_the_Trees_-_panoramio.jpg} (by Adrian Farwell, CC BY 3.0)};
 
   \end{tikzpicture}
   \pause[400]
