--- a/samcarter/globe/globe.tex
+++ b/samcarter/globe/globe.tex
@@ -30,7 +30,7 @@
     };
 
     % credit for background image
-    \node[white,text width=\paperwidth,font=\tiny,align=center] at ([yshift=0.35cm]current page.south) {Image source: \url{https://commons.wikimedia.org/wiki/File:Shakespeare's_Globe_(39593782581).jpg}};
+    \node[white,text width=\paperwidth,font=\tiny,align=center] at ([yshift=0.35cm]current page.south) {Image source: \url{https://commons.wikimedia.org/wiki/File:Shakespeare's_Globe_(39593782581).jpg} (by Daniel, CC BY 2.0)};
 
   \end{tikzpicture}
 \end{frame}
