--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -143,8 +143,8 @@
 \illustration[Example]{\textwidth,page=14}{example-image-16x9.png}
 \begin{monthCalendar}{\nextyear}{07}
 \event{2026-07-01}{2026-07-03}{OSSConf 2026 (Žilina, Slovakia)}
+\event{2026-07-17}{2026-07-19}{TUG'26 (Alberta, Canada)}
 \event{2026-07-18}{}{Dies ater}
-%\event{2026-07-??}{2026-07-??}{TUG'26 (Alberta, Canada)}
 \end{monthCalendar}
 \timestamp{t=2m53s}
 
@@ -179,7 +179,7 @@
 \end{monthCalendar}
 \timestamp{t=1m48s}
 
-\illustration[Happy Christmas]{\textwidth,page=14}{../carlatex/HappyChristmas/HappyChristmas}
+\illustration[Happy Christmas]{\textwidth,page=14}{example-image-duck}
 \begin{monthCalendar}{\nextyear}{12}
 \event{2026-12-08}{}{Pretend To Be A Time Traveler Day}
 %\event{2026-12-??}{}{TikZlings Extravaganza 2026 release}
