--- a/samcarter/dante/dante.tex
+++ b/samcarter/dante/dante.tex
@@ -20,6 +20,8 @@
 
     \node at (7,0) {\includegraphics[width=10cm]{Firenze_aka_Florence,_Italy_(42195612411)}};
 
+    \node[xscale=-1] at (2+\insertoverlaynumber*8/350,1) {\includegraphics[width=2.5cm]{Hang_gliding_leonardo}};
+
     \fill[even odd rule,brown!20!darkgray!60!black,draw=brown!20!darkgray!80!black,line width=6pt]
       (current page.south west) rectangle (current page.north east) (3,-3) -- ++(2,0) -- ++(0,4.5) arc [start angle=0, end angle=180, radius=1] -- (3,-3)
       (5.5,-3) -- ++(2,0) -- ++(0,5) arc [start angle=0, end angle=180, radius=1] -- (5.5,-3)
