--- a/samcarter/dante/dante.tex
+++ b/samcarter/dante/dante.tex
@@ -18,30 +18,32 @@
 \begin{frame}
   \begin{tikzpicture}[remember picture, overlay]
 
-    \node at (7,0) {\includegraphics[width=10cm]{Firenze_aka_Florence,_Italy_(42195612411)}};
+    \node at (9,0) {\includegraphics[width=10cm]{Firenze_aka_Florence,_Italy_(42195612411)}};
 
-    \node[xscale=-1] at (2+\insertoverlaynumber*8/350,1) {\includegraphics[width=2.5cm]{Hang_gliding_leonardo}};
+    \node[xshift=2cm,xscale=-1] at (2+\insertoverlaynumber*8/350,1) {\includegraphics[width=2.5cm]{Hang_gliding_leonardo}};
 
-    \fill[even odd rule,brown!20!darkgray!60!black,draw=brown!20!darkgray!80!black,line width=6pt]
+    \fill[xshift=2cm,even odd rule,brown!20!darkgray!60!black,draw=brown!20!darkgray!80!black,line width=6pt]
       (current page.south west) rectangle (current page.north east) (3,-3) -- ++(2,0) -- ++(0,4.5) arc [start angle=0, end angle=180, radius=1] -- (3,-3)
       (5.5,-3) -- ++(2,0) -- ++(0,5) arc [start angle=0, end angle=180, radius=1] -- (5.5,-3)
       (8,-3) -- ++(2,0) -- ++(0,4.5) arc [start angle=0, end angle=180, radius=1] -- (8,-3)
       ;
 
-    \node at (7,-1) {\includegraphics[width=5cm]{dante_duck}};
+    \node[draw=brown!20!darkgray!80!black,line width=6pt] at (2,0.5) {\includegraphics[width=3.5cm]{IMG_4528}};
+
+    \node at (9,-1) {\includegraphics[width=5cm]{dante_duck}};
 
     \fill[brown!60!black] (current page.south west) rectangle ++(\paperwidth,2.5cm);
 
-    \fill[white!70!brown] (4.5,-4.6) -- ++(1.5,0) -- ++(-0.15,1.8) -- ++(-1.2,0) -- cycle;
+    \fill[xshift=2cm,white!70!brown] (4.5,-4.6) -- ++(1.5,0) -- ++(-0.15,1.8) -- ++(-1.2,0) -- cycle;
 
-    \draw[line width=0.7pt] (4.7,-4.3) -- ++(1,0);
-    \draw[line width=0.7pt] (4.7,-4.1) -- ++(1,0);
-    \draw[line width=0.7pt] (4.7,-3.9) -- ++(1,0);
-    \draw[line width=0.7pt] (4.7,-3.7) -- ++(1,0);
+    \draw[xshift=2cm,line width=0.7pt] (4.7,-4.3) -- ++(1,0);
+    \draw[xshift=2cm,line width=0.7pt] (4.7,-4.1) -- ++(1,0);
+    \draw[xshift=2cm,line width=0.7pt] (4.7,-3.9) -- ++(1,0);
+    \draw[xshift=2cm,line width=0.7pt] (4.7,-3.7) -- ++(1,0);
 
     \begin{scope}[xshift=sin(2*\thepage)*0.5cm]
-      \fill[white] (5.2,-3.5) ellipse [x radius=0.1,y radius=0.5];
-      \draw[white,line width=1.5pt] (5.2,-3.5) -- ++(0,-0.7);
+      \fill[xshift=2cm,white] (5.2,-3.5) ellipse [x radius=0.1,y radius=0.5];
+      \draw[xshift=2cm,white,line width=1.5pt] (5.2,-3.5) -- ++(0,-0.7);
     \end{scope}
 
     % credit for background image
