--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -129,7 +129,7 @@
 \end{monthCalendar}
 \timestamp{t=4m42s}
 
-\illustration[Flower Power]{\textwidth,page=46}{../paulo/flower-field/flower-field}
+\illustration[A Nature Lover]{\textwidth,page=46}{../paulo/flower-field/flower-field}
 \begin{monthCalendar}{\nextyear}{06}
 \event{2026-06-01}{}{\LaTeX\ release}
 \event{2026-06-02}{}{Festa della Repubblica (Italy)}
@@ -148,7 +148,7 @@
 \end{monthCalendar}
 \timestamp{t=2m53s}
 
-\illustration[Mirage]{\textwidth,page=347}{../carlatex/mirage/Mirage}
+\illustration[A Mirage]{\textwidth,page=347}{../carlatex/mirage/Mirage}
 \begin{monthCalendar}{\nextyear}{08}
 \event{2026-08-06}{2026-08-08}{TypeCon 2026 (Portland, Oregon)}
 \event{2026-08-15}{}{Ferragosto}
