hiding navigation symbols in new credit frame

--- a/intermissions/extravaganza-credits.tex
+++ b/intermissions/extravaganza-credits.tex
@@ -8,6 +8,7 @@
 \usepackage[most]{tcolorbox}
 
 \setbeamercolor{background canvas}{bg=Seashell1}
+\setbeamertemplate{navigation symbols}{}
 
 \begin{document}
 
