--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -179,7 +179,7 @@
 \end{monthCalendar}
 \timestamp{t=1m48s}
 
-\illustration[Happy Christmas]{\textwidth,page=14}{example-image-duck}
+\illustration[Happy Christmas]{\textwidth,page=14}{../carlatex/HappyChristmas/HappyChristmas}
 \begin{monthCalendar}{\nextyear}{12}
 \event{2026-12-08}{}{Pretend To Be A Time Traveler Day}
 %\event{2026-12-??}{}{TikZlings Extravaganza 2026 release}
