StormyWeather: animated background

--- a/carlatex/StormyWeather/StormyWeather.tex
+++ b/carlatex/StormyWeather/StormyWeather.tex
@@ -4,7 +4,7 @@
 \usetikzlibrary{decorations.markings}
 
 \setbeamertemplate{navigation symbols}{}
-\setbeamertemplate{background canvas}{\includegraphics[width=\paperwidth]{sea-6975501_1280}}
+\setbeamertemplate{background canvas}{\includegraphics[width=\paperwidth]{200244-912370046_tiny-\thepage}}
 \graphicspath{{include/}}
 
 % trick taken from https://topanswers.xyz/tex?q=1989
@@ -56,7 +56,7 @@
                                		
     % credit for background image
     \node[white,text width=.7\paperwidth,font=\tiny,align=center] at (7,-4.82)
-      {Image source: \url{https://pixabay.com/de/photos/meer-wellen-sturm-himmel-wolken-6975501/}};
+      {Image source: \url{https://pixabay.com/videos/sea-ocean-waves-crashing-storm-200244/}};
 
   \end{tikzpicture}
   \pause[500]
