update calendar + readme

--- a/calendar/extravaganza_calendar.tex
+++ b/calendar/extravaganza_calendar.tex
@@ -164,7 +164,8 @@
 \end{monthCalendar}
 \timestamp{t=0m26s}
 
-\illustration[TikZlings Abbey]{\textwidth,page=250}{../samcarter/TikZlingsAbbey/TikZlingsAbbey}
+%\illustration[TikZlings Abbey]{\textwidth,page=250}{../samcarter/TikZlingsAbbey/TikZlingsAbbey}
+\illustration[All the world's a stage]{\textwidth,page=14}{../samcarter/globe/globe}
 \begin{monthCalendar}{\nextyear}{10}
 \event{2026-10-16}{}{Global Cat Day}
 \event{2026-10-25}{}{Saint Crispin's Day}
@@ -172,7 +173,7 @@
 \end{monthCalendar}
 \timestamp{t=0m10s}
 
-\illustration[All the world's a stage]{\textwidth,page=14}{../samcarter/globe/globe}
+\illustration[Silent Beach]{\textwidth,page=14}{../ulrike/silentnight/silentnight}
 \begin{monthCalendar}{\nextyear}{11}
 \event{2026-11-01}{}{\LaTeX\ release}
 \event{2026-11-07}{}{Hug a Bear Day}
