nhl, missing hummingbird

--- a/ulrike/nhl/nhl-duck.tex
+++ b/ulrike/nhl/nhl-duck.tex
@@ -13,8 +13,8 @@ mullet=white]
   \fill[brown!70!black, rounded corners=3] (0.2,0.2) rectangle (0.85,0.4);
   \end{scope}}
 \newpage 
-\tikz{\duck[body=cyellow,tshirt=cred,%hockey=brown!70!black,
-mullet=black]
+\tikz[xscale=-1]{\duck[body=cyellow,tshirt=cred,%hockey=brown!70!black,
+mullet=white]
 \node[shape=circle,fill=white,xshift=2,inner sep=0pt] at (wing) {\includegraphics[width=3mm]{calgary-flames}};
   \begin{scope}[xshift=1mm,yshift=-2mm]
   \fill[brown!70!black, rounded corners=1, rotate=-30] (0.5,0.6) rectangle (0.6,2.1);
