--- a/ulrike/birds/birds.tex
+++ b/ulrike/birds/birds.tex
@@ -1,3 +1,5 @@
+% !TeX TS-program = lualatex -interaction=nonstopmode % | txs:///view-pdf | txs:///view-log
+
 % !Mode:: "TeX:UTF-8:Main"
 %music https://youtu.be/JOGC3sNJJxs 1:17 ...
 \RequirePackage{pdfmanagement}
